# rest

./: CMakeLists.txt  conanfile.py
src/: CMakeLists.txt  main.cpp  request_handler.cpp  request_handler.hpp  rest_server.cpp  rest_server.hpp
src/http/: method_handler.hpp  simple_rest.cpp
src/models/tables/: users.cpp  users.hpp
src/rest/: CMakeLists.txt  request_handler.cpp  rest_server.cpp  rest_server.hpp
src/rest/http/: method_handler.cpp  method_handler.hpp  request_handler.cpp  request_handler.hpp  simple_rest.hpp
src/rest/http/controllers/: goods_controller.cpp  goods_controller.hpp  user_get.cpp  user_get.hpp  user_login.cpp  user_login.hpp  user_register.cpp  user_register.hpp  user_search.cpp  user_search.hpp  users_controller.cpp  users_controller.hpp
src/rest/http/models/: abstract_table_model.hpp
src/rest/http/models/users/: user_auth_row.cpp  user_auth_row.hpp  user_find_condition.cpp  user_find_condition.hpp  user_row.cpp  user_row.hpp  users.cpp  users.hpp  users_auth.cpp  users_auth.hpp
src/rest/models/: abstract_table_row.hpp
src/rest/models/tables/: crud_interface.hpp  goods.cpp  goods.hpp  users.cpp  users.hpp
src/rest/models/users/: user_auth_row.cpp  user_auth_row.hpp  user_find_condition.cpp  user_find_condition.hpp  user_row.cpp  user_row.hpp  users.cpp  users.hpp  users_auth.cpp  users_auth.hpp
src/rest/resources/: connection_parameters.cpp  connection_parameters.hpp  jsons.cpp  jsons.hpp  messages.cpp  messages.hpp  methods.cpp  methods.hpp
src/rest/utils/: utils.cpp  utils.hpp
tests/: simple_post.ps1  simple_post.py  users.html
